--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,49 @@ annotated-types==0.7.0
 anyio==4.8.0
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
 fastapi==0.115.10
+filelock==3.13.1
+fire==0.7.0
+fonttools==4.56.0
+fsspec==2024.6.1
 h11==0.14.0
 idna==3.10
+imageio==2.37.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.8
+lazy_loader==0.4
+MarkupSafe==2.1.5
+matplotlib==3.10.1
+medmnist==3.0.2
+mpmath==1.3.0
+networkx==3.3
+numpy==2.1.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==70.2.0
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.0
+sympy==1.13.1
+termcolor==2.5.0
+threadpoolctl==3.5.0
+tifffile==2025.2.18
+torch==2.6.0+cu118
+torchaudio==2.6.0+cu118
+torchvision==0.21.0+cu118
+tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.1
 uvicorn==0.34.0
